// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cfJLes ilgFUJ"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-kTqJeW jxJhzO"
      tabindex="0"
    >
      <span
        class="sc-haThUj cDfHUf"
      >
        <i
          aria-hidden="true"
          class="sc-knKKcV cLpvVU"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-knKKcV cLpvVU"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-hoHvKZ cDsijp"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-knKKcV cLpvVU"
    >
      : 
    </i>
    <span
      class="sc-leSMyW jGyDYL"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message mixing emoji and text renders them inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cfJLes ilgFUJ"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-kTqJeW jxJhzO"
      tabindex="0"
    >
      <span
        class="sc-haThUj cDfHUf"
      >
        <i
          aria-hidden="true"
          class="sc-knKKcV cLpvVU"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-knKKcV cLpvVU"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-hoHvKZ cDsijp"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-knKKcV cLpvVU"
    >
      : 
    </i>
    <span
      class="sc-leSMyW jGyDYL"
    >
      nice game 
      <div
        class="sc-fotPuT jrxelZ sc-cQMBOM iRPWnb"
        tabindex="-1"
      >
        <span
          class="sc-hLVYED iofSeq"
        >
          🔥
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message sent as an emote reads as an action line 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cfJLes ilgFUJ"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-kTqJeW jxJhzO"
      tabindex="0"
    >
      <span
        class="sc-haThUj cDfHUf"
      >
        <i
          aria-hidden="true"
          class="sc-knKKcV cLpvVU"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-knKKcV cLpvVU"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-cAiakp gMziwM"
    >
      * 
    </span>
    <span
      class="sc-kTLoNQ lcQRjv sc-hoHvKZ sc-gqtqYm cDsijp hrKXRg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
     
    <span
      class="sc-leSMyW sc-cxVPNz jGyDYL clkueU"
    >
      waves at everyone
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cfJLes ilgFUJ"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-kTqJeW jxJhzO"
      tabindex="0"
    >
      <span
        class="sc-haThUj cDfHUf"
      >
        <i
          aria-hidden="true"
          class="sc-knKKcV cLpvVU"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-knKKcV cLpvVU"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-hoHvKZ cDsijp"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-knKKcV cLpvVU"
    >
      : 
    </i>
    <span
      class="sc-leSMyW jGyDYL"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cfJLes ilgFUJ"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-kTqJeW jxJhzO"
      tabindex="0"
    >
      <span
        class="sc-haThUj cDfHUf"
      >
        <i
          aria-hidden="true"
          class="sc-knKKcV cLpvVU"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-knKKcV cLpvVU"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-hoHvKZ cDsijp"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-knKKcV cLpvVU"
    >
      : 
    </i>
    <span
      class="sc-leSMyW jGyDYL"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-kTLoNQ lcQRjv sc-hmvloj dqKpei"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dwsoFP bAeoWW"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cfJLes ilgFUJ"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-kTqJeW jxJhzO"
      tabindex="0"
    >
      <span
        class="sc-haThUj cDfHUf"
      >
        <i
          aria-hidden="true"
          class="sc-knKKcV cLpvVU"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-knKKcV cLpvVU"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-hoHvKZ cDsijp"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-knKKcV cLpvVU"
    >
      : 
    </i>
    <span
      class="sc-leSMyW jGyDYL"
    >
      hey
       
      <span
        class="sc-kTLoNQ lcQRjv sc-hmvloj dqKpei"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dwsoFP bAeoWW"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-kTLoNQ lcQRjv sc-hmvloj dqKpei"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dwsoFP bAeoWW"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cfJLes ilgFUJ"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-kTqJeW jxJhzO"
      tabindex="0"
    >
      <span
        class="sc-haThUj cDfHUf"
      >
        <i
          aria-hidden="true"
          class="sc-knKKcV cLpvVU"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-knKKcV cLpvVU"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-hoHvKZ cDsijp"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-knKKcV cLpvVU"
    >
      : 
    </i>
    <span
      class="sc-leSMyW jGyDYL"
    >
      hey
       
      <span
        class="sc-kTLoNQ lcQRjv sc-hmvloj dqKpei"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dwsoFP bAeoWW"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cfJLes ilgFUJ"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-kTqJeW jxJhzO"
      tabindex="0"
    >
      <span
        class="sc-haThUj cDfHUf"
      >
        <i
          aria-hidden="true"
          class="sc-knKKcV cLpvVU"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-knKKcV cLpvVU"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-hoHvKZ cDsijp"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-knKKcV cLpvVU"
    >
      : 
    </i>
    <span
      class="sc-leSMyW jGyDYL"
    >
      <span
        class="sc-kTLoNQ lcQRjv sc-hmvloj dqKpei"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dwsoFP bAeoWW"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cfJLes ilgFUJ"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-kTqJeW jxJhzO"
      tabindex="0"
    >
      <span
        class="sc-haThUj cDfHUf"
      >
        <i
          aria-hidden="true"
          class="sc-knKKcV cLpvVU"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-knKKcV cLpvVU"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-hoHvKZ cDsijp"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-knKKcV cLpvVU"
    >
      : 
    </i>
    <span
      class="sc-leSMyW jGyDYL"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-kTLoNQ lcQRjv sc-hmvloj dqKpei"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dwsoFP bAeoWW"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cfJLes kcWgCS"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-kTqJeW jxJhzO"
      tabindex="0"
    >
      <span
        class="sc-haThUj cDfHUf"
      >
        <i
          aria-hidden="true"
          class="sc-knKKcV cLpvVU"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-knKKcV cLpvVU"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-hoHvKZ cDsijp"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-knKKcV cLpvVU"
    >
      : 
    </i>
    <span
      class="sc-leSMyW jGyDYL"
    >
      Hey
       
      <span
        class="sc-kTLoNQ lcQRjv sc-hmvloj dqKpei"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dwsoFP bAeoWW"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with only emoji renders them jumbo-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cfJLes ilgFUJ"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-kTqJeW jxJhzO"
      tabindex="0"
    >
      <span
        class="sc-haThUj cDfHUf"
      >
        <i
          aria-hidden="true"
          class="sc-knKKcV cLpvVU"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-knKKcV cLpvVU"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-hoHvKZ cDsijp"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-knKKcV cLpvVU"
    >
      : 
    </i>
    <span
      class="sc-leSMyW jGyDYL"
    >
      <div
        class="sc-fotPuT jrxelZ sc-cQMBOM iRPWnb"
        tabindex="-1"
      >
        <span
          class="sc-hLVYED ifrwIJ"
        >
          🔥
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-cQMBOM iRPWnb"
        tabindex="-1"
      >
        <span
          class="sc-hLVYED ifrwIJ"
        >
          🔥
        </span>
      </div>
       
      <div
        class="sc-fotPuT jrxelZ sc-cQMBOM iRPWnb"
        tabindex="-1"
      >
        <span
          class="sc-hLVYED ifrwIJ"
        >
          🎉
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with too many emoji for jumbo stays inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cfJLes ilgFUJ"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-kTqJeW jxJhzO"
      tabindex="0"
    >
      <span
        class="sc-haThUj cDfHUf"
      >
        <i
          aria-hidden="true"
          class="sc-knKKcV cLpvVU"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-knKKcV cLpvVU"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-hoHvKZ cDsijp"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-knKKcV cLpvVU"
    >
      : 
    </i>
    <span
      class="sc-leSMyW jGyDYL"
    >
      <div
        class="sc-fotPuT jrxelZ sc-cQMBOM iRPWnb"
        tabindex="-1"
      >
        <span
          class="sc-hLVYED iofSeq"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-cQMBOM iRPWnb"
        tabindex="-1"
      >
        <span
          class="sc-hLVYED iofSeq"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-cQMBOM iRPWnb"
        tabindex="-1"
      >
        <span
          class="sc-hLVYED iofSeq"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-cQMBOM iRPWnb"
        tabindex="-1"
      >
        <span
          class="sc-hLVYED iofSeq"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-cQMBOM iRPWnb"
        tabindex="-1"
      >
        <span
          class="sc-hLVYED iofSeq"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-cQMBOM iRPWnb"
        tabindex="-1"
      >
        <span
          class="sc-hLVYED iofSeq"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-cQMBOM iRPWnb"
        tabindex="-1"
      >
        <span
          class="sc-hLVYED iofSeq"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-cQMBOM iRPWnb"
        tabindex="-1"
      >
        <span
          class="sc-hLVYED iofSeq"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-cQMBOM iRPWnb"
        tabindex="-1"
      >
        <span
          class="sc-hLVYED iofSeq"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-cQMBOM iRPWnb"
        tabindex="-1"
      >
        <span
          class="sc-hLVYED iofSeq"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-cQMBOM iRPWnb"
        tabindex="-1"
      >
        <span
          class="sc-hLVYED iofSeq"
        >
          😀
        </span>
      </div>
    </span>
  </div>
</div>
`;
